# BrowserOS

./: CONTRIBUTING.md  LICENSE.ungoogled_chromium  README.md  manifest.json  package-lock.json  package.json  pyproject.toml
.github/: SECURITY.md
agent/: README.md
chromium_files/chrome/enterprise_companion/: branding.gni
chromium_patches/chrome/: BUILD.gn  VERSION
chromium_patches/chrome/app/: app-Info.plist  chrome_command_ids.h  generated_resources.grd
chromium_patches/chrome/browser/: BUILD.gn  chrome_browser_main.cc  global_keyboard_shortcuts_mac.mm  sparkle_buildflags.gni
chromium_patches/chrome/browser/extensions/: BUILD.gn  browseros_extension_constants.h  browseros_external_loader.cc  browseros_external_loader.h  chrome_extension_registrar_delegate.cc  chrome_extensions_browser_api_provider.cc  extension_context_menu_model.cc  extension_management.cc  extension_web_ui_override_registrar.cc  external_provider_impl.cc
chromium_patches/chrome/browser/extensions/api/browser_os/: browser_os_api.cc  browser_os_api.h  browser_os_api_helpers.cc  browser_os_api_helpers.h  browser_os_api_utils.cc  browser_os_api_utils.h  browser_os_change_detector.cc  browser_os_change_detector.h  browser_os_content_processor.cc  browser_os_content_processor.h  browser_os_snapshot_processor.cc  browser_os_snapshot_processor.h
chromium_patches/chrome/browser/extensions/api/debugger/: debugger_api.cc
chromium_patches/chrome/browser/extensions/api/developer_private/: extension_info_generator_shared.cc
chromium_patches/chrome/browser/extensions/api/settings_private/: prefs_util.cc
chromium_patches/chrome/browser/extensions/api/side_panel/: side_panel_api.cc
chromium_patches/chrome/browser/importer/: importer_list.cc
chromium_patches/chrome/browser/mac/: chrome_browser_main_extra_parts_mac.h  chrome_browser_main_extra_parts_mac.mm  sparkle_glue.h  sparkle_glue.mm  su_updater.h
chromium_patches/chrome/browser/media/: extension_media_access_handler.cc
chromium_patches/chrome/browser/metrics/: chrome_metrics_service_client.cc
chromium_patches/chrome/browser/prefs/: browser_prefs.cc  browser_prefs.h
chromium_patches/chrome/browser/profiles/: chrome_browser_main_extra_parts_profiles.cc
chromium_patches/chrome/browser/resources/settings/: BUILD.gn  route.ts  router.ts  settings.ts
chromium_patches/chrome/browser/resources/settings/browseros_prefs_page/: browseros_prefs_page.html  browseros_prefs_page.ts
chromium_patches/chrome/browser/resources/settings/nxtscape_page/: models_data.html  models_data.ts  nxtscape_page.html  nxtscape_page.ts
chromium_patches/chrome/browser/resources/settings/settings_main/: settings_main.html  settings_main.ts
chromium_patches/chrome/browser/resources/settings/settings_menu/: settings_menu.html
chromium_patches/chrome/browser/sync/prefs/: chrome_syncable_prefs_database.cc
chromium_patches/chrome/browser/ui/: BUILD.gn  browser_actions.cc  browser_command_controller.cc  ui_features.cc  ui_features.h
chromium_patches/chrome/browser/ui/actions/: browseros_actions_config.h  chrome_action_id.h
chromium_patches/chrome/browser/ui/extensions/: settings_overridden_params_providers.cc
chromium_patches/chrome/browser/ui/startup/: google_api_keys_infobar_delegate.cc
chromium_patches/chrome/browser/ui/toolbar/: toolbar_actions_model.cc  toolbar_pref_names.cc  toolbar_pref_names.h
chromium_patches/chrome/browser/ui/toolbar/pinned_toolbar/: pinned_toolbar_actions_model.cc  pinned_toolbar_actions_model.h
chromium_patches/chrome/browser/ui/views/: accelerator_table.cc
chromium_patches/chrome/browser/ui/views/side_panel/: BUILD.gn  side_panel.cc  side_panel.h  side_panel_entry_id.h  side_panel_prefs.cc  side_panel_util.cc
chromium_patches/chrome/browser/ui/views/side_panel/clash_of_gpts/: clash_of_gpts_coordinator.cc  clash_of_gpts_coordinator.h  clash_of_gpts_view.cc  clash_of_gpts_view.h  clash_of_gpts_window.cc  clash_of_gpts_window.h
chromium_patches/chrome/browser/ui/views/side_panel/extensions/: extension_side_panel_manager.cc
chromium_patches/chrome/browser/ui/views/side_panel/third_party_llm/: third_party_llm_panel_coordinator.cc  third_party_llm_panel_coordinator.h  third_party_llm_view.cc  third_party_llm_view.h
chromium_patches/chrome/browser/ui/views/toolbar/: pinned_action_toolbar_button.cc  pinned_action_toolbar_button.h  pinned_toolbar_actions_container.cc
chromium_patches/chrome/browser/ui/webui/: BUILD.gn  chrome_web_ui_configs.cc  nxtscape_first_run.h
chromium_patches/chrome/browser/ui/webui/clash_of_gpts/: clash_of_gpts_ui.cc  clash_of_gpts_ui.h
chromium_patches/chrome/browser/ui/webui/help/: sparkle_version_updater_mac.h  sparkle_version_updater_mac.mm  version_updater_mac.mm
chromium_patches/chrome/browser/ui/webui/settings/: browseros_metrics_handler.cc  browseros_metrics_handler.h  settings_ui.cc
chromium_patches/chrome/browser/ui/webui/side_panel/customize_chrome/customize_toolbar/: customize_toolbar.mojom  customize_toolbar_handler.cc
chromium_patches/chrome/common/: chrome_constants.cc  chrome_paths_linux.cc  pref_names.h  webui_url_constants.h
chromium_patches/chrome/common/extensions/api/: _api_features.json  _permission_features.json  api_sources.gni  browser_os.idl
chromium_patches/chrome/common/extensions/permissions/: chrome_api_permissions.cc
chromium_patches/chrome/install_static/: chromium_install_modes.cc  chromium_install_modes.h
chromium_patches/components/metrics/browseros_metrics/: BUILD.gn  DEPS  browseros_metrics.cc  browseros_metrics.h  browseros_metrics_prefs.cc  browseros_metrics_prefs.h  browseros_metrics_service.cc  browseros_metrics_service.h  browseros_metrics_service_factory.cc  browseros_metrics_service_factory.h
chromium_patches/components/vector_icons/: BUILD.gn  chat_orange.icon  clash_of_gpts.icon
docs/: abort-fix-design.md  appcast-x86_64.xml  appcast.xml  dev_cli_design.md  docs.json  onboarding.mdx  update.mdx
patches/: series
resources/files/bug_reporter/: BUILD.gn  background.js  content.js  manifest.json  popup.html  popup.js
src/: config.ts
(+123 files in other folders)
