diff --git a/chrome/browser/extensions/BUILD.gn b/chrome/browser/extensions/BUILD.gn
index d50ffdfbcce34..9d3bafb63caeb 100644
--- a/chrome/browser/extensions/BUILD.gn
+++ b/chrome/browser/extensions/BUILD.gn
@@ -280,6 +280,8 @@ source_set("extensions") {
     "external_install_manager.h",
     "external_install_manager_factory.cc",
     "external_install_manager_factory.h",
+    "browseros_external_loader.cc",
+    "browseros_external_loader.h",
     "external_loader.cc",
     "external_loader.h",
     "external_policy_loader.cc",
@@ -516,6 +518,18 @@ source_set("extensions") {
       "api/bookmark_manager_private/bookmark_manager_private_api.h",
       "api/bookmarks/bookmarks_api.cc",
       "api/bookmarks/bookmarks_api.h",
+      "api/browser_os/browser_os_api.cc",
+      "api/browser_os/browser_os_api.h",
+      "api/browser_os/browser_os_api_helpers.cc",
+      "api/browser_os/browser_os_api_helpers.h",
+      "api/browser_os/browser_os_api_utils.cc",
+      "api/browser_os/browser_os_api_utils.h",
+      "api/browser_os/browser_os_change_detector.cc",
+      "api/browser_os/browser_os_change_detector.h",
+      "api/browser_os/browser_os_content_processor.cc",
+      "api/browser_os/browser_os_content_processor.h",
+      "api/browser_os/browser_os_snapshot_processor.cc",
+      "api/browser_os/browser_os_snapshot_processor.h",
       "api/chrome_device_permissions_prompt.h",
       "api/chrome_extensions_api_client.cc",
       "api/chrome_extensions_api_client.h",
@@ -936,6 +950,7 @@ source_set("extensions") {
       "//components/language/core/common",
       "//components/language/core/language_model",
       "//components/live_caption:constants",
+      "//components/metrics/browseros_metrics",
       "//components/media_device_salt",
       "//components/nacl/common:buildflags",
       "//components/navigation_interception",
