diff --git a/chrome/browser/ui/webui/BUILD.gn b/chrome/browser/ui/webui/BUILD.gn
index f74846025f398..5452b6a0c7cf2 100644
--- a/chrome/browser/ui/webui/BUILD.gn
+++ b/chrome/browser/ui/webui/BUILD.gn
@@ -89,6 +89,8 @@ source_set("configs") {
 
 source_set("webui") {
   sources = [
+    "clash_of_gpts/clash_of_gpts_ui.cc",
+    "clash_of_gpts/clash_of_gpts_ui.h",
     "constrained_web_dialog_ui.cc",
     "constrained_web_dialog_ui.h",
     "current_channel_logo.cc",
